--- a/snp_site/my_site/templates/photo_list_page.html
+++ b/snp_site/my_site/templates/photo_list_page.html
@@ -1,22 +1,22 @@
-<!-- templates/photo_list.html -->
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo List</title>
-</head>
-<body>
-    <h1>Photo List</h1>
+{%block title%}Photo List{%endblock%}
+{%block content%}
     <ul>
         {% for photo in object_list %}
             <li>
                 <h1>{{ photo.user}}<h1> 
                 <h1>{{photo.caption}}</h1>
                 <img src={{photo.photo.url}} alt="нет фото"/>
+                <p>Лайки:{{photo.likes.count}}<p>
+                    
+                {%for com in photo.model_relation.all%}
+                    <h1>{{com.user}}</h1>
+                    <p>{{com.comment}}</p>
+                {%empty%}   
+                    <p>nothing</p>
+                {%endfor%}            
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{%endblock%}
