--- a/snp_site/my_site/templates/photo_list_page.html
+++ b/snp_site/my_site/templates/photo_list_page.html
@@ -1,22 +1,29 @@
 {% extends "base.html" %}
-
+{% load static %}
 {%block title%}Photo List{%endblock%}
 {%block content%}
-    <ul>
+<div class ="post-container">
         {% for photo in object_list %}
-            <li>
-                <h1>{{ photo.user}}<h1> 
-                <h1>{{photo.caption}}</h1>
-                <img src={{photo.photo.url}} alt="нет фото"/>
-                <p>Лайки:{{photo.likes.count}}<p>
-                    
-                {%for com in photo.model_relation.all%}
-                    <h1>{{com.user}}</h1>
-                    <p>{{com.comment}}</p>
-                {%empty%}   
-                    <p>nothing</p>
-                {%endfor%}            
-            </li>
+        <form action="{% url 'photo_page' photo.id %}" method="get">
+            <button type="submit" class="my-button">
+                <div class="post">
+
+                    <h1>{{ photo.user}}<h1> 
+                    <h1>{{photo.caption}}</h1>
+                    <img src={{photo.photo.url}} alt="нет фото"/>
+                    <div class="coment-and-like-container">
+                        <div class="left-element">
+                            <img src="{% static 'images/chat.png' %} " class="like-comment-image"/>
+                            {{photo.model_relation.count}}
+                        </div>
+                        <div class="right-element">
+                            <img src="{% static 'images/heart.png' %}" class="like-comment-image"/>
+                            {{photo.likes.count}}
+                        </div>
+                    </div>
+                </div> 
+            </button>  
+            </form>
         {% endfor %}
-    </ul>
+</div>
 {%endblock%}
