--- a/snp_site/my_site/templates/base.html
+++ b/snp_site/my_site/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>{%block title%}{%endblock%}</title>
 </head>
+{%block header%}
 <header>
     <nav>
         {% csrf_token %}
@@ -29,6 +30,7 @@
 
     </nav>
 </header>
+{%endblock%}
 <body>
     <main>
         {%block content%}
