--- a/snp_site/my_site/templates/base.html
+++ b/snp_site/my_site/templates/base.html
@@ -1,4 +1,5 @@
 <!-- templates/photo_list.html -->
+{%load socialaccount%}
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
@@ -26,6 +27,8 @@
         <a>Гость</a>
         
         <a href="{% url 'login' %}">Войти</a>|<a href="{% url 'register' %}">Регистрация</a>
+        <a href="{% provider_login_url 'google' %}">google</a>
+        <a href="{% provider_login_url 'github' %}">github</a>
         {%endif%}
 
     </nav>
