--- a/snp_site/my_site/templates/photo_page.html
+++ b/snp_site/my_site/templates/photo_page.html
@@ -2,10 +2,12 @@
 {% block content %}
 {% load static %}
 <div class="post-container">
+    <div class="card">
+        <img src="{{ photo.photo.url }}" alt="нет фото" class="card-img-top mx-auto" style="max-width: 80%; height: auto;">
+        <h1 class="fw-bold mt-2 text-center">{{ photo.user }}</h1>
+        <h2 class="mt-2  text-center">{{ photo.caption }}</h2>
+    </div>
     <div class="post card p-4 mb-4">
-        <h1 class="fw-bold">{{ photo.user }}</h1>
-        <h2 class="mt-2">{{ photo.caption }}</h2>
-        <img src="{{ photo.photo.url }}" alt="нет фото" class="img-fluid my-3"/>
         
         {% if user.is_authenticated %}
             <form action="{% url 'comment' photo.pk %}" method="post" class="mb-3">
