--- a/snp_site/my_site/templates/base.html
+++ b/snp_site/my_site/templates/base.html
@@ -1,77 +1,122 @@
 {% load static %}
-{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>{% block title %}Photolist{% endblock %}</title>
 </head>
-{% block header %}
+<body>
 <header class="bg-dark text-white fixed-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="{% url 'photo_list' %}">Photolist</a>
+            <a class="navbar-brand" href="http://127.0.0.1:8000/photos/">Photolist</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    {% csrf_token %}
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'main_page' %}">Создать Фото</a>
-                    </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'photo_list' %}">Просмотреть фото</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user_page' user.id %}">Пользователь: {{ user }}</a>
-                    </li>
-                    <li class="nav-item">
-                        <form action="{% url 'logout' %}" method="post" class="d-inline">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-link nav-link">Logout</button>
-                        </form>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <span class="nav-link">Гость</span>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Войти</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% provider_login_url 'google' %}">Google</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% provider_login_url 'github' %}">GitHub</a>
-                    </li>
-                    {% endif %}
+                <ul class="navbar-nav" id="nav-items">
+                    <!-- Элементы навигации будут добавлены через JavaScript -->
                 </ul>
             </div>
         </nav>
     </div>
 </header>
-{% endblock %}
-<body>
-    <main class="mt-5 pt-5">
-        {% block content %}
-        {% endblock %}
-    </main>
-    <footer class="bg-dark text-light text-center py-3">
-        <div class="container">
-            <p class="mb-0">Исламов Мурад</p>
-        </div>
-    </footer>
+<main class="mt-5 pt-5">
+    {% block content %}
+    {% endblock %}
+</main>
+<footer class="bg-dark text-light text-center py-3">
+    <div class="container">
+        <p class="mb-0">Исламов Мурад</p>
+    </div>
+</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+{% block js %}
+{% endblock %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function() {
+        const token = localStorage.getItem('token');
+        const navItems = $('#nav-items');
+        const user_url = 'http://127.0.0.1:8000/user/'+localStorage.getItem('user_id')+'/';
+
+        if (token) {
+            // Если токен существует, добавляем элементы для авторизованного пользователя
+            
+                let li1 = document.createElement('li');
+                li1.classList.add('nav-item');
+                let a1 = document.createElement('a');
+                a1.classList.add('nav-link');
+                a1.href = user_url;
+                a1.innerText = 'Пользователь: '+localStorage.getItem('username');
+                let li2 = document.createElement('li');
+                li2.classList.add('nav-item');
+                let a2 = document.createElement('a');
+                a2.href = "http://127.0.0.1:8000/photos/";
+                a2.innerText = 'Просмотреть фото';
+                a2.classList.add('nav-link');
+                let li3 = document.createElement('li');
+                li3.classList.add('nav-item');
+                let a3 = document.createElement('a');
+                a3.href = "http://127.0.0.1:8000/photos/create/";
+                a3.innerText = 'Создать Фото';
+                a3.classList.add('nav-link');
+                let li4 = document.createElement('li');
+                li4.classList.add('nav-item');
+                let button4 = document.createElement('button');
+                button4.classList.add('btn', 'btn-link', 'nav-link');
+                button4.innerText = 'Logout';
+                button4.addEventListener('click', function() {
+                    localStorage.removeItem('token');
+                    localStorage.removeItem('username');
+                    localStorage.removeItem('user_id');
+                    window.location.href = 'http://127.0.0.1:8000/jwt/';
+                });
+
+                
+                li1.appendChild(a1);
+                li2.appendChild(a2);
+                li3.appendChild(a3);
+                li4.appendChild(button4);
+
+
+                navItems.append(li1);
+                navItems.append(li2);
+                navItems.append(li3);
+                navItems.append(li4);
+
+                
+            ;
+        } else {
+            // Если токен отсутствует, добавляем элементы для гостя
+           
+
+            let li1 = document.createElement('li');
+            li1.classList.add('nav-item');
+            let a1 = document.createElement('a');
+            a1.classList.add('nav-link');
+            a1.href = "http://127.0.0.1:8000/jwt/";
+            a1.innerText = 'Войти';
+            let li2 = document.createElement('li');
+            li2.classList.add('nav-item');
+            let a2 = document.createElement('a');
+            a2.href = "http://127.0.0.1:8000/register/";
+            a2.innerText = 'Регистрация';
+            a2.classList.add('nav-link');
+            li1.appendChild(a1);
+            li2.appendChild(a2);
+            navItems.append(li1);
+            navItems.append(li2);
+        }
+
+        // Обработка выхода из системы
+       
+    });
+</script>
 </body>
 </html>
