--- a/snp_site/my_site/templates/registration/register.html
+++ b/snp_site/my_site/templates/registration/register.html
@@ -1,11 +1,67 @@
 {% extends "base.html"%}
 {%block content%}
+<div class="container d-flex flex-column align-items-center">
     <h1>REGISTER</h1>
-    <form action={% url 'register' %} method="post">
+    <form id="register-form" class="w-50" >
         {% csrf_token %}
         <div class="mb-3 ">
-            {{ form }}
+            <label class="form-label">Username</label>
+            <input type="text" id="username" class="form-control" name="username" placeholder="Username" required>
+
+            <label class="form-label">Password</label>
+            <input type='text' id="password" class="form-control" name="password" placeholder="Password" required>
+
+            <label class="form-label">Avatar</label>
+            <input type="file" id="avatar" class="form-control" name="avatar" placeholder="Avatar" required>
         </div>
-        <button type="submit">Register</button>
     </form>
+    <button id="register-button"  class="btn btn-primary">Register</button>
+</div>
+    <script>
+        function parseJwt (token) {
+        var base64Url = token.split('.')[1];
+        var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+        var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+            return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+        }).join(''));
+        return JSON.parse(jsonPayload);
+    };
+    </script>
+    <script >
+        $(document).ready(function() {
+            $('#register-button').click(function(event) {
+                event.preventDefault();
+                
+                var username = $('#username').val();
+                var password = $('#password').val();
+                var avatar = $('#avatar').prop('files')[0];
+                
+                var formData = new FormData();
+                formData.append('username', username);
+                formData.append('password', password);
+                formData.append('avatar', avatar);
+                
+                $.ajax({
+                    url: 'http://127.0.0.1:8000/api/users/register',
+                    type: 'POST',
+                    data: formData,
+                    processData: false, // Не обрабатывать данные
+                    contentType: false,  // Не устанавливать заголовок contentType
+                    success: function(response) {
+                        // Обработка успешного ответа
+                        localStorage.setItem('refresh', response.refresh);
+                        localStorage.setItem('token', response.access);
+                        localStorage.setItem('user_id', parseJwt(response.access).user_id);
+                        localStorage.setItem('username', username);
+                        window.location.href = 'http://127.0.0.1:8000/photos/';
+                    },
+                    error: function(xhr, status, error) {
+                        // Обработка ошибки
+                        console.log(error);
+                    }
+                });
+            });
+        });
+        
+    </script>
 {%endblock%}
