--- a/snp_site/my_site/templates/photo_page.html
+++ b/snp_site/my_site/templates/photo_page.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
-{% block content %}
 {% load static %}
+{% block content %}
 <div class="post-container">
     <div class="card">
-        <img src="{{ photo.photo.url }}" alt="нет фото" class="card-img-top mx-auto" style="max-width: 80%; height: auto;">
-        <h1 class="fw-bold mt-2 text-center">{{ photo.user }}</h1>
-        <h2 class="mt-2  text-center">{{ photo.caption }}</h2>
+        <img  alt="нет фото" id="photo" class="card-img-top mx-auto" style="max-width: 80%; height: auto;">
+        <h1 class="fw-bold mt-2 text-center" id="user"></h1>
+        <h2 class="mt-2 text-center" id="description"></h2>
     </div>
+
     <div class="post card p-4 mb-4">
-        
         {% if user.is_authenticated %}
             <form action="{% url 'comment' photo.pk %}" method="post" class="mb-3">
                 {% csrf_token %}
@@ -18,11 +18,11 @@
                     <button type="submit" class="btn btn-primary">Отправить</button>
                 </div>
             </form>
-            <form action="{% url 'like' photo.pk %}" method="post" class="mb-3">
+            <form id="like-form" class="mb-3">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-outline-danger">
                     <img src="{% static 'images/heart.png' %}" class="like-comment-image" alt="Лайк"/> 
-                    {{ photo.likes.count }}
+                    <span class="like-count">{{ photo.likes.count }}</span>
                 </button>
             </form>
         {% endif %}
@@ -33,4 +33,40 @@
         {% endfor %}
     </div>
 </div>
+{% endblock %}
+{% block js %}
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    function getPhotoId() {
+        const url = new URL(window.location.href); // Создаем объект URL
+        const pathSegments = url.pathname.split('/'); // Разделяем путь по символу '/'
+        const photoId = pathSegments[pathSegments.length - 2]; // Извлекаем предпоследний элемент
+        return photoId;
+        
+    }
+
+    async function fetchphoto() {
+        const url = 'http://127.0.0.1:8000/api/photo/' + getPhotoId();
+        const response = await fetch(url, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json'
+            }
+        });
+        const data = await response.json();
+        console.log(data);
+
+        document.getElementById('photo').src = data.photo;
+        document.getElementById('user').textContent = data.user.username;
+        document.getElementById('description').textContent = data.description;
+
+        }
+    document.addEventListener('DOMContentLoaded', () => {
+        fetchphoto();
+    });
+    
+
+    
+</script>
 {% endblock %}
