fix username showing

--- a/snp_site/my_site/templates/photo_list_page.html
+++ b/snp_site/my_site/templates/photo_list_page.html
@@ -67,7 +67,7 @@
                         <img src="${element.photo}" alt="нет фото" class="card-img-top mx-auto" style="max-width: 100%; height: auto;">
                     </a>
                     <div class="card-body">
-                        <h5 class="card-title">${element.user}</h5>
+                        <h5 class="card-title">${element.user.username}</h5>
                         <p class="card-text">${element.description}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="d-flex align-items-center">
